syntax = "proto3";
package user;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/Soypete/Golang_datatools_exercises/ex-4-data-contracts/proto/gen/go";

service UserAction {
  rpc UpdateUser(User) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/user/update/{id}"
      body: "*"
    };
  }
  rpc GetUserInfo(UserIdentifier) returns (User) {
    option (google.api.http) = {get: "/user/getinfo/{user_id}"};
  }
  rpc DeleteUser(UserIdentifier) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/user/delete/{user_id}"
      body: "*"
    };
  }
  rpc SendUserAction(Action) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/action/send/{user_id}"
      body: "*"
    };
  }
}

message UserIdentifier {
  int32 user_id = 1;
}

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

message Action {
  int32 user_id = 1;
  ActionEnum action = 2;
  bool success = 3;
  string error = 4;
  google.protobuf.Timestamp timestamp = 5;
}

enum ActionEnum {
  DEFAULT = 0;
  LOGIN = 1;
  LOGOUT = 2;
  PURCHASE = 3;
  RETURN = 4;
  ADD_TO_CART = 5;
  REMOVE_FROM_CART = 6;
  VIEW_ITEM = 7;
  VIEW_CART = 8;
  VIEW_PURCHASE_HISTORY = 9;
}
